# Skills-MCP-Sankhya-Ajuda

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.etl  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: ACCEPTANCE_REPORT.md  ARCHITECTURE.md  DEPLOY.md  EMBEDDINGS-PROVIDER.md  EXAMPLES.md  FALLBACK_STRATEGY.md  INSTALL.md  OPERATIONS.md  SCHEMA.md  TOOLS.md
mcp-server/: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  README.md  ecosystem.http.config.cjs  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
mcp-server/docs/: TOOLS.md
mcp-server/src/: config.ts  db.ts  embeddings.ts  index-compat.ts  index.ts  logger.ts  prompts.ts  resources.ts  server.ts  types.ts  version.ts
mcp-server/src/formatters/: entity.ts  markdown.ts  response-formatter.ts
mcp-server/src/search/: rrf.ts
mcp-server/src/tools/: articles.ts  base.ts  categories.ts  community.ts  prompt-tools.ts  resource-tools.ts  search-unified.ts  search.ts  sections.ts  working-index.ts
mcp-server/src/transports/: auth.ts  health.ts  http.ts  oauth-rejection.ts
mcp-server/src/utils/: html-stripper.ts
mcp-server/tests/: audit.test.ts  base.test.ts  config-logger.test.ts  db.test.ts  embeddings.test.ts  entity-formatter.test.ts  fallback-policy.test.ts  html-stripper.test.ts  index-compat.test.ts  markdown.test.ts  prompts.test.ts  protocol-http.test.ts  resources-read.test.ts  resources.test.ts  response-formatter.test.ts  server.test.ts
mcp-server/tests/e2e/: mcp-server.e2e.test.ts
mcp-server/tests/integration/: golden-eval.test.ts  r9-threshold.test.ts  smoke-db.test.ts
mcp-server/tests/search/: rrf.test.ts
mcp-server/tests/tools/: community.test.ts  search-unified-http.test.ts  search-unified.test.ts
mcp-server/tests/transports/: http.test.ts
scripts/: sankhya_ajuda_community_sync.cron  sankhya_ajuda_community_sync.logrotate  sankhya_ajuda_sync.cron  sankhya_ajuda_sync.logrotate  setup_db.sh
sql/: community_schema.sql  kb_search_views.sql  schema.sql
src/sankhya_ajuda/: __init__.py  community_db.py  config.py  db.py  embeddings.py  indexer.py
src/sankhya_ajuda/sources/: __init__.py  base.py
sync/: bettermode.py  community_sync.py  parser.py  sync.py  zendesk.py
tests/: conftest.py  test_bettermode.py  test_community_sync.py  test_embeddings.py  test_parser.py  test_sync.py
